# ferris-http

./: Cargo.toml
src/lib/: app_state.rs  data.rs  lib.rs  services.rs
src/lib/data/: repositories.rs  validators.rs
src/lib/data/repositories/: article_repository.rs
src/lib/data/validators/: article_validator.rs
src/lib/domain/: handlers.rs
src/lib/domain/handlers/: article_handler.rs
src/lib/domain/services/: article_service.rs
src/lib/handlers/: article_handler.rs  home_handler.rs
src/lib/infrastructure/: app_state.rs
src/lib/models/: article.rs
src/lib/repositories/: article_repository.rs
src/lib/services/: article_service.rs
