[package]
name = "http"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
axum = "0.7.7"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.210", features = ["derive"] }
